[package]
name = "safeline-rs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Rust SDK for SafeLine WAF API"
license = "MIT"
repository = "https://github.com/yourusername/safeline-sdk"
keywords = ["safeline", "waf", "security", "api"]
categories = ["api-bindings", "web-programming::http-client"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
url = "2.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[dev-dependencies]
tokio-test = "0.4"
